--- a/Loguin1/Loguin1/bin/Loguin1.dll.config
+++ b/Loguin1/Loguin1/bin/Loguin1.dll.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=301880
@@ -9,8 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Loguin1-20170729100452.mdf;Initial Catalog=aspnet-Loguin1-20170729100452;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=LAPTOP-17N0MO5O\SQLEXPRESS;initial catalog=Loguin;integrated security=True" providerName="System.Data.SqlClient" />
+    <add name="LoguinEntities" connectionString="metadata=res://*/DataAccess.Loguin.csdl|res://*/DataAccess.Loguin.ssdl|res://*/DataAccess.Loguin.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-17N0MO5O\SQLEXPRESS;initial catalog=Loguin;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
